# Rust-3D-Environment

./: Cargo.toml  README.md  build.rs
res/: resources.txt
res/cube/: cube.mtl  hcube.mtl
src/: lib.rs  main.rs  shader.wgsl  state.rs
src/state/: camera.rs  camera_controller.rs  mouse_grabber.rs  world.rs
src/state/world/: instance.rs  model.rs  resources.rs  texture.rs
