[package]
name = "rust3d"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "22.0"
pollster = "0.3"
bytemuck = { version = "1.16", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18"
tobj = { version = "3.2", default-features = false, features = ["async"]}
futures = "0.3"

[build-dependencies]
fs_extra = "1.2"
glob = "0.3"
anyhow = "1.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[dev-dependencies]
tokio-test = "*"
